[package]
name = 'diagnostic'
version = '0.0.0'
authors = ['Matthias Fauconneau <matthias.fauconneau@gmail.com>']
edition = '2018'

[dependencies]
framework = { path = 'framework', features = ['process'] }
serde = { version = '', features = ['derive'] }
serde_json = ''
clap = { git = "https://github.com/clap-rs/clap/" }
