[package]
name = 'view'
version = '0.0.0'
authors = ['Matthias Fauconneau <matthias.fauconneau@gmail.com>']
edition = '2018'

[dependencies]
fehler = ''
core = { version = '', path='../core'}
usvg = ''
resvg = ''
xy = { version = '', path='../xy'}
image = { version = '', path='../image' }
ui = { version = '', path='../ui', features=['app']}
